# Test_CI-CD

./: CMakeLists.txt  main.cpp
.github/workflows/: blank.yml  cmake-multi-platform.yml
